--- a/pd/list_curr_pd_mw.yml
+++ b/pd/list_curr_pd_mw.yml
@@ -1,2 +1,10 @@
 - name: 'List ongoing maintenance windows using a token'
   pagerduty: name=karauction token=_2pbEisVaYkhDd7FtPKN state=ongoing
+
+tasks:  
+
+  - name: Send notification message via Slack
+  slack:
+    token: thetoken/generatedby/slack
+    msg: '{{ inventory_hostname }} completed'
+  delegate_to: localhost
